--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^1.2.0",
+    "browserify-zlib": "^0.2.0",
     "formik": "^2.2.9",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4"
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.75.0",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
